# tap-intacct

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_intacct/: __init__.py  __main__.py  client.py  const.py  exceptions.py  sage.py  streams.py  tap.py
tests/: __init__.py  test_core.py
